2011-11-21 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/base-application.c (appli_initialize_gtk): Fix a typo.

	* src/core/na-gtk-utils.c (na_gtk_utils_dump_children):
	Increment the level of the first child of the hierarchy.

	* run-autogen.sh: Be able to run from another directory.

2011-11-16 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/base-window.c:
	* src/nact/base-window.h (base_window_dump_children): New function.

	* src/core/na-gtk-utils.c:
	* src/core/na-gtk-utils.h (na_gtk_utils_dump_children): New function.

	* docs/nact/C/nact-conditions.xml:
	* docs/nact/C/nact-edit.xml:
	* docs/nact/C/nact-execution.xml:
	* docs/nact/C/nact-profiles.xml:
	* docs/nact/C/nact-sorting.xml:
	* src/nact/nact-assistant-import.c:
	Fix with advices of Christian Kirbach.
	Fix #660399, reported by Christian Kirbach.

2011-11-15 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/nact-export-format.c:
	* src/nact/nact-main-toolbar.c:
	Get ride of deprecated GtkHBox and GtkVBox.

2011-11-05 Pierre Wieser <pwieser@trychlos.org>

	* run-autogen.sh, run-distcheck.sh: Defines a special 'distcheck' mode.

2011-11-02 Pierre Wieser <pwieser@trychlos.org>

	* docs/nact/C/nact-conditions.xml:
	* docs/nact/C/nact-edit.xml:
	* docs/nact/C/nact-execution.xml:
	* docs/nact/C/nact-menus.xml:
	* docs/nact/C/nact-profiles.xml:
	Apply patch provided by Christian Kirbach.
	Fix #661498 reported by Christian Kirbach.

	* docs/nact/C/nact-conditions.xml: Replace 'regarding' with
	'regardless'.
	From #660399, reported by Gabor Karsay.

2011-11-02 Pierre Wieser <pwieser@trychlos.org>

	* src/io-desktop/nadp-writer.c (nadp_iio_provider_is_able_to_write):
	* src/nact/base-gtk-utils.c (base_gtk_utils_select_file_with_preview):
	* src/nact/nact-assistant-import.c (prepare_confirm):
	* src/nact/nact-clipboard.c (nact_clipboard_dnd_set):
	* src/nact/nact-main-statusbar.c (nact_main_statusbar_set_locked):
	* src/nact/nact-preferences-editor.c (desktop_setup):