@@ -1,5 +1,11 @@
 2011-11-21 Pierre Wieser <pwieser@trychlos.org>
 
+	* src/nact/nautilus-actions-config-tool.ui:
+	Remove empty children from GtkAssistant container.
+
+	* src/nact/nact-assistant-import.c:
+	Adapt to the new way Gtk+ 3.2 builds the assistant.
+
 	* src/nact/base-application.c (appli_initialize_gtk): Fix a typo.
 
 	* src/core/na-gtk-utils.c (na_gtk_utils_dump_children):
